--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,7 @@
 body {
 	background: black;
 }
-* {
-	border: 1px dashed red;
-	min-height: 10px;
-}
+
 .postcard {
 	margin: auto;
 	width: 400px;
@@ -21,4 +18,14 @@ body {
 .postcard-header h1 {
 	width: 100%;
 	margin: 0;
+}
+.postcard-body {
+	display: flex;
+}
+.postcard-footer {
+	text-align: center;
+}
+button {
+	background-color: gray;
+	padding: 10px;
 }
